# cxxmodules

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  workflow.cmake
.github/workflows/: build.yml
header-unit/: CMakeLists.txt  Makefile.clang  Makefile.clang-cl  Makefile.gcc  Makefile.msvc  hello.hpp  main.cpp
import-std/: CMakeLists.txt  Makefile.clang  Makefile.clang-cl  Makefile.clang-win32  Makefile.msvc  main.cpp  std.cppm
module-impl/: CMakeLists.txt  Makefile.clang  Makefile.clang-cl  Makefile.gcc  Makefile.msvc  impl.cpp  main.cpp
module-partition/: CMakeLists.txt  Makefile.clang  Makefile.clang-cl  Makefile.gcc  Makefile.msvc  hello.cppm  hello.ixx  interface.cppm  internal.cppm
named-module/: CMakeLists.txt  Makefile.clang  Makefile.clang-cl  Makefile.gcc  Makefile.msvc  hello.cppm
shared-lib/: CMakeLists.txt  Makefile.clang  Makefile.clang-cl  Makefile.clang-mingw  Makefile.clang-win32  Makefile.gcc  Makefile.msvc  hello.hpp  hello.ixx  impl.cpp  main.cpp
