cmake_minimum_required(VERSION 3.28)
project(cxxmodules)

set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

enable_testing()
add_subdirectory(named-module)
add_subdirectory(module-partition)
add_subdirectory(module-impl)
# add_subdirectory(header-unit)
add_subdirectory(import-std)
add_subdirectory(shared-lib)
